# ps-utils

./: .gitignore  Cargo.toml  README.md
scripts/: install.ps1
src/: archive.rs  config.rs  doctor.rs  editor.rs  envs.rs  history.rs  loading.rs  main.rs  menu.rs  path_menu.rs  picker.rs  ports.rs  procs.rs  profile.rs  shell_module.rs  shortcut.rs  workspaces.rs
