[package]
name = "ps"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A Rust CLI that gives PowerShell users saved-path and shortcut control."
repository = "https://github.com/krispowers/ps"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
