[package]
name = "ps"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Fast, practical PowerShell utilities with interactive menus and shortcuts."
repository = "https://github.com/KrisPowers/ps-utils"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2-zlib-rs"] }
